@@ -2,6 +2,8 @@ Mahout Change Log
 
 Release 0.9 - unreleased
 
+  MAHOUT-1410: clusteredPoints do not contain a vector id (smarthi, Andrew Musselman)
+
   MAHOUT-1409: MatrixVectorView has index check error (tdunning)
 
   MAHOUT-1402: Zero clusters using streaming k-means option in cluster-reuters.sh (smarthi)
